Sat Feb 24 22:14:00 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* win32/win32.c (myrename): fix error handling.

Sat Feb 24 15:43:31 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: use net 1.2 for also ruby 1.6 branch.

	* lib/net/smtp.rb: ditto.

	* lib/net/pop.rb: ditto.

	* lib/net/http.rb: ditto.

Fri Feb 23 16:36:09 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/http.rb: always close connection if body is not exist.

Fri Feb 23 13:27:05 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/http.rb: keep-alive detection was incomplete.

Fri Feb 23 08:24:53 2001  Minero Aoki  <aamine@dp.u-netsurf.ne.jp>

	* lib/net/protocol.rb: clear read buffer after reopen.

	* lib/net/http.rb: update RD document.

Tue Feb 20 16:37:58 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* bignum.c (rb_big2long): should not raise RangeError for Bignum
	  LONG_MIN value.

Mon Feb 19 17:46:37 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (rb_str_substr): "a"[1,2] should return ""; need
	  rubicon upgrade.

Mon Feb 19 01:55:43 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (secure_visibility): visibility check for untainted modules.

Mon Feb 19 00:29:29 2001  Nobuyoshi Nakada  <nobu.nakada@nifty.ne.jp>

	* signal.c (sigpipe): sighandler which does nothing.

	* signal.c (trap): set sigpipe function for SIGPIPE.

	* signal.c (Init_signal): default SIGPIPE handler should be
	  sigpipe function.

Sun Feb 18 15:42:38 2001  WATANABE Hirofumi  <eban@ruby-lang.org>

	* ext/curses/extconf.rb: add dir_config.

	* missing/flock.c: use fcntl(2) instead of lockf(2).

Sun Feb 18 13:02:03 2001  Yasushi Shoji  <yashi@yashi.com>

	* array.c (rb_ary_subseq): wrong boundary check.

Fri Feb 16 01:44:56 2001  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (set_outfile): f should be the FILE* from the assigning value.

Thu Feb 15 11:33:49 2001  Shugo Maeda <shugo@ruby-lang.org>

	* lib/cgi/session.rb (close): fixed reversed condition.