@@ -1,3 +1,7 @@
+Sun Feb 25 02:45:30 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
+
+	* file.c (rb_file_s_rename): avoid Cygwin's bug.
+
 Sat Feb 24 22:14:00 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* win32/win32.c (myrename): fix error handling.
